<resources>
    <string name="app_name">3rdYearProject</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email2">Email2</string>
    <string name="log_in2">Log In2</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="radius">Radius</string>
    <string name="latitude">Latitude</string>
    <string name="lonitude">Lonitude</string>
    <string name="set_geofence">Set Geofence</string>
    <string name="patient_id">Patient ID</string>
</resources>
